kubernetes/interactionservice.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: interactionservice
  labels:
    app: interactionservice
spec:
  selector:
    app: interactionservice
  ports:
    - protocol: TCP
      port: 8080         # Service is exposed on port 8080
      targetPort: 8080   # Forwards traffic to container's port 8080
  type: ClusterIP         # Internal access only; use LoadBalancer for external access

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: interactionservice
  labels:
    app: interactionservice
spec:
  replicas: 3  # Ensures high availability with 3 instances
  selector:
    matchLabels:
      app: interactionservice
  template:
    metadata:
      labels:
        app: interactionservice
    spec:
      serviceAccountName: interactionservice-sa # Use the defined ServiceAccount
      containers:
        - name: interactionservice
          image: socialnetworkapp/interactionservice
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: interactionservice-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: interactionservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic only from the API Gateway
            matchLabels:
              app: apigateway
        - podSelector: # Allow traffic from TweetPostingService for inter-service communication
            matchLabels:
              app: tweetpostingservice
        - podSelector: # Allow traffic from RabbitMQ for message handling
            matchLabels:
              app: rabbitmq
