kubernetes/rabbitmq.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672         # AMQP communication port
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672        # RabbitMQ Management UI port
      targetPort: 15672

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1  # Only one replica for RabbitMQ
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      serviceAccountName: rabbitmq-sa # Use the defined ServiceAccount
      containers:
        - name: rabbitmq
          image: "rabbitmq:3-management"
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic from all microservices
            matchLabels:
              app: userprofileservice
        - podSelector:
            matchLabels:
              app: tweetpostingservice
        - podSelector:
            matchLabels:
              app: interactionservice
        - podSelector:
            matchLabels:
              app: apigateway
