kubernetes/userprofileservice.k8s.yml
---

apiVersion: v1
kind: Service
metadata:
  name: userprofileservice
  labels:
    app: userprofileservice
spec:
  selector:
    app: userprofileservice
  ports:
    - protocol: TCP
      port: 8080         # Service is exposed on port 8080
      targetPort: 8080   # Forwards traffic to container's port 8080
  type: ClusterIP         # Internal access only

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofileservice
  labels:
    app: userprofileservice
spec:
  replicas: 3  # Ensures high availability with 3 instances
  selector:
    matchLabels:
      app: userprofileservice
  template:
    metadata:
      labels:
        app: userprofileservice
    spec:
      serviceAccountName: userprofileservice-sa  # Use the defined ServiceAccount
      containers:
        - name: userprofileservice
          image: socialnetworkapp/userprofileservice
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userprofileservice-allow-specific-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: userprofileservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: # Allow traffic only from API Gateway
            matchLabels:
              app: apigateway
        - podSelector: # Allow traffic from TweetPostingService
            matchLabels:
              app: tweetpostingservice
        - podSelector: # Allow traffic from RabbitMQ
            matchLabels:
              app: rabbitmq
